[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://IsoGenerator.gd" type="Script" id=2]

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0 ),
"format": "RGB8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id=2]
image = SubResource( 8 )
size = Vector2( 1, 1 )

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 0, 0, 0 ),
"format": "RGB8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id=4]
image = SubResource( 9 )
size = Vector2( 1, 1 )

[sub_resource type="Image" id=10]
data = {
"data": PoolByteArray( 0, 0, 0 ),
"format": "RGB8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id=6]
image = SubResource( 10 )
size = Vector2( 1, 1 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Viewport")

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_v_flip = true

[node name="IsoGenerator" type="Control" parent="Viewport"]
margin_right = 128.0
margin_bottom = 135.554
script = ExtResource( 2 )
top_texture = null
top_color = Color( 1, 1, 1, 1 )
left_texture = null
left_color = Color( 1, 1, 1, 1 )
right_texture = null
right_color = Color( 1, 1, 1, 1 )
antialiasing = true
height = 1.0
adapt_uv = 1

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -164.0
margin_right = 272.0
margin_bottom = 164.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "C:/Users/coldr/Documents/Iso Generator"
current_path = "C:/Users/coldr/Documents/Iso Generator/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -160.0
margin_right = 272.0
margin_bottom = 160.0
access = 2
current_dir = "C:/Users/coldr/Documents/Iso Generator"
current_file = "save.png"
current_path = "C:/Users/coldr/Documents/Iso Generator/save.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="ColorRect" parent="."]
anchor_right = 0.137
anchor_bottom = 1.0
margin_right = 0.511993
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopOptions" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeLabel" type="Label" parent="UI/TopOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -80.0
margin_right = 56.0
margin_bottom = -64.0
text = "Size"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="SpinBox" parent="UI/TopOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -56.0
margin_right = 56.0
margin_bottom = -32.0
min_value = 2.0
max_value = 512.0
value = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightLabel" type="Label" parent="UI/TopOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -24.0
margin_right = 56.0
margin_bottom = -8.0
text = "Height"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="SpinBox" parent="UI/TopOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_right = 56.0
margin_bottom = 24.0
max_value = 1.0
step = 0.025
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UV_AdaptLabel" type="Label" parent="UI/TopOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 32.0
margin_right = 56.0
margin_bottom = 48.0
text = "UV Adapt"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UV_Adapt" type="OptionButton" parent="UI/TopOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 56.0
margin_right = 56.0
margin_bottom = 80.0
text = "TOP"
items = [ "NONE", null, false, 0, null, "TOP", null, false, 1, null, "DOWN", null, false, 2, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="UI"]
anchor_right = 1.0
margin_top = 176.0
margin_bottom = 312.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Top"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 24.0
text = "Top"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="UI/Top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/Top"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -24.0
margin_right = 40.0
margin_bottom = -4.0
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="UI/Top"]
margin_left = 48.0
margin_top = 136.0
margin_right = 128.0
margin_bottom = 156.0
color = Color( 0.75, 0.75, 0.75, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Control" parent="UI"]
anchor_right = 1.0
margin_top = 344.0
margin_bottom = 480.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Left"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 24.0
text = "Left"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="UI/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/Left"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -24.0
margin_right = 40.0
margin_bottom = -4.0
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="UI/Left"]
margin_left = 48.0
margin_top = 136.0
margin_right = 128.0
margin_bottom = 156.0
color = Color( 0.5, 0.5, 0.5, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Control" parent="UI"]
anchor_right = 1.0
margin_top = 512.0
margin_bottom = 648.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Right"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 24.0
text = "Right"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="UI/Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/Right"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -24.0
margin_right = 40.0
margin_bottom = -4.0
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="UI/Right"]
margin_left = 48.0
margin_top = 136.0
margin_right = 128.0
margin_bottom = 156.0
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antialiasing" type="CheckButton" parent="UI"]
margin_left = 8.0
margin_top = 680.0
margin_right = 84.0
margin_bottom = 720.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Antialiasing"]
margin_left = 72.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 32.0
text = "Antialiasing"
align = 1
valign = 1

[node name="Result" type="TextureRect" parent="."]
anchor_left = 0.137
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.639984
texture = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Result"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -80.0
margin_right = 96.0
margin_bottom = -8.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="value_changed" from="UI/TopOptions/Size" to="." method="_on_Value_Change"]
[connection signal="value_changed" from="UI/TopOptions/Height" to="." method="_on_Value_Change"]
[connection signal="item_selected" from="UI/TopOptions/UV_Adapt" to="." method="_on_Value_Change"]
[connection signal="pressed" from="UI/Top/Load" to="." method="_on_Load_Top_pressed"]
[connection signal="color_changed" from="UI/Top/Color" to="." method="_on_Value_Change"]
[connection signal="pressed" from="UI/Left/Load" to="." method="_on_Load_Left_pressed"]
[connection signal="color_changed" from="UI/Left/Color" to="." method="_on_Value_Change"]
[connection signal="pressed" from="UI/Right/Load" to="." method="_on_Load_Right_pressed"]
[connection signal="color_changed" from="UI/Right/Color" to="." method="_on_Value_Change"]
[connection signal="pressed" from="UI/Antialiasing" to="." method="_generate"]
[connection signal="pressed" from="Result/SaveButton" to="." method="_on_SaveButton_pressed"]
